// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link/> renders an external link 1`] = `
<DocumentFragment>
  <a
    class=""
    href="https://foo.com/bar"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`<Link/> renders an external link as Nav.Link 1`] = `
<DocumentFragment>
  <a
    class="nav-link"
    href="https://foo.com/bar"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`<Link/> renders an internal link 1`] = `
<DocumentFragment>
  <a
    class=""
    href="/foo"
  >
    Hello
  </a>
</DocumentFragment>
`;
